alterations/cqrs/kubernetes/static/user_service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      service: user-service
      dependency: main
  template:
    metadata:
      labels:
        service: user-service
        dependency: main
    spec:
      containers:
      - name: user-service
        image: ghcr.io/quinten1333/thesisfair-user_service:cqrs
        resources:
          requests:
            cpu: 0.2
            memory: 128Mi
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: "/app/data"
          name: cv-storage
      volumes:
      - name: cv-storage
        persistentVolumeClaim:
          claimName: cv-storage

      imagePullSecrets:
      - name: regghcr

---

apiVersion: v1
kind: Service
metadata:
  name: service-user-service-mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
      service: user-service
      dependency: mongodb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-service-mongodb
spec:
  serviceName: service-user-service-mongodb
  replicas: 1

  selector:
    matchLabels:
      service: user-service
      dependency: mongodb
  template:
    metadata:
      labels:
        service: user-service
        dependency: mongodb
    spec:
      containers:
      - name: user-service-mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data-user-service-mongodb
          mountPath: /data/db
        imagePullPolicy: IfNotPresent

  volumeClaimTemplates:
  - metadata:
      name: data-user-service-mongodb
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
