alterations/cqrs/kubernetes/static/vote_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-service
spec:
  selector:
    matchLabels:
      service: vote-service
      dependency: main
  template:
    metadata:
      labels:
        service: vote-service
        dependency: main
    spec:
      containers:
      - name: vote-service
        image: ghcr.io/quinten1333/thesisfair-vote_service:cqrs
        resources:
          requests:
            cpu: 0.2
            memory: 128Mi
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regghcr

---

apiVersion: v1
kind: Service
metadata:
  name: service-vote-service-mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
      service: vote-service
      dependency: mongodb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vote-service-mongodb
spec:
  serviceName: service-vote-service-mongodb
  replicas: 1

  selector:
    matchLabels:
      service: vote-service
      dependency: mongodb
  template:
    metadata:
      labels:
        service: vote-service
        dependency: mongodb
    spec:
      containers:
      - name: vote-service-mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data-vote-service-mongodb
          mountPath: /data/db
        imagePullPolicy: IfNotPresent

  volumeClaimTemplates:
  - metadata:
      name: data-vote-service-mongodb
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
