alterations/cqrs/kubernetes/static/API_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      service: api-gateway
      dependency: main
  # replicas: 2
  template:
    metadata:
      labels:
        service: api-gateway
        dependency: main
    spec:
      containers:
      - name: api-gateway
        image: ghcr.io/quinten1333/thesisfair-api_gateway:cqrs
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 0.4
            memory: 128Mi
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regghcr

---

apiVersion: v1
kind: Service
metadata:
  name: service-api-gateway
  labels:
    service: api-gateway
    dependency: main
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
  selector:
    service: api-gateway
    dependency: main

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-gateway

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  service-api-gateway
                port:
                  number: 80
